--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third-party/tviewer"]
 	path = third-party/tviewer
-	url = https://github.com/taketwo/tviewer.git
+	url = https://github.com/larics/tviewer.git
