--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 project(TCS)
-find_package(PCL 1.7.2 REQUIRED)
+find_package(PCL REQUIRED)
 
-option(WITH_QT_GUI "Build Qt GUI application." ON)
+option(WITH_QT_GUI "Build Qt GUI application." OFF)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/" ${CMAKE_MODULE_PATH})
 
