--- a/src/hungarian/CMakeLists.txt
+++ b/src/hungarian/CMakeLists.txt
@@ -2,6 +2,10 @@ set(SUBSYS_NAME hungarian)
 
 set(HUNGARIAN_SOURCE_DIR ${PROJECT_SOURCE_DIR}/third-party/hungarian-v2.0)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 include_directories(${PROJECT_SOURCE_DIR}/include/${SUBSYS_NAME})
 include_directories(${HUNGARIAN_SOURCE_DIR})
 
@@ -13,13 +17,4 @@ add_library(hungarian
   ${HUNGARIAN_SOURCE_DIR}/PlotGraph.cpp
   ${HUNGARIAN_SOURCE_DIR}/plot/Cgnuplot.cpp
   ${HUNGARIAN_SOURCE_DIR}/plot/graph_hungarian.cpp
-)
-
-set_target_properties(hungarian
-  PROPERTIES COMPILE_FLAGS -std=c++98
-)
-
-SET_SOURCE_FILES_PROPERTIES(
-  hungarian.cpp
-  PROPERTIES COMPILE_FLAGS -std=gnu++11
 )
